corpus/c/syntax/case-12/snapshots/gcc13_14/native_text_capture/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:10: error: [syntax] syntax error
help: fix the first parser error at the user-owned location
want: )
near: { token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ‘)’ before ‘{’ token

src/main.c:6:1: error: [syntax] syntax error
help: fix the first parser error at the user-owned location
want: expression
near: } token
| src/main.c:6:1
| }
| ^
raw:
  src/main.c:6:1: error: expected expression before ‘}’ token

error: [linker] linker reported a failure
help: check the missing/duplicate symbol and the object or library inputs
raw : src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’)
raw:
  src/main.c:10:16: error: invalid operands to binary + (have ‘int *’ and ‘char *’)
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output